# LyricsView

./: .gitignore  K3.0集成文档.md  README.md  build.gradle  gradle.properties  publishing.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 151675-fake-for-line-scoring.xml  237732-modified-for-testing.xml
app/src/main/res/drawable/: pitch_indicator_yellow.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
karaoke_view/: README.md  build.gradle
karaoke_view/src/main/cpp/: CMakeLists.txt  io_agora_karaoke_view_internal_ai_AINative.cpp  io_agora_karaoke_view_v11_ai_AINative.cpp
karaoke_view/src/main/java/io/agora/karaoke_view/: DownloadManager.java  KaraokeEvent.java  KaraokeView.java  LyricsView.java  ScoringView.java
karaoke_view/src/main/java/io/agora/karaoke_view_ex/: KaraokeEvent.java  LyricsView.java
karaoke_view/src/main/res/values/: attrs.xml  colors.xml  dimens.xml
karaoke_view_ex/: build.gradle
karaoke_view_ex/keystore/: 2D14CD0A.gpg
karaoke_view_ex/src/main/cpp/: Algorithm.c  Algorithm.h  CMakeLists.txt  io_agora_karaoke_view_ex_internal_ai_AIAlgorithmScoreNative.cpp  log.h
karaoke_view_ex/src/main/java/io/agora/karaoke_view_ex/: IScoringAlgorithm.java  KaraokeEvent.java  (+3 more)
karaoke_view_ex/src/main/res/values/: attrs.xml
lrcview/: README.md  build.gradle
lrcview/src/main/res/values/: attrs.xml  dimens.xml
(+165 files in other folders)
